# TurkColBERT

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
benchmarks/: benchmark_with_custom_muvera.py  benchmark_with_muvera.py  comprehensive_muvera_comparison.py  muvera_comprehensive_benchmark.py  nfcorpus_tr_evaluation.py
benchmarks/BenchmarkResults/ColmmBERT-base-TR/: comprehensive_results-2.csv  comprehensive_results-2.json  muvera_comprehensive_results.csv  muvera_comprehensive_results.json
benchmarks/BenchmarkResults/ColmmBERT-small-TR/: comprehensive_results.csv  comprehensive_results.json  muvera_comprehensive_results.json  muvera_comprehensive_results__1_.csv
benchmarks/BenchmarkResults/TurkEmbed4Retrieval/: Turkembed4Retrieval_Muvera_comprehensive.md  comprehensive_results.json  muvera_comprehensive_results-2.csv  muvera_comprehensive_results-2.json
benchmarks/BenchmarkResults/col-ettin-encoder-32M-TR/: comprehensive_results.csv  comprehensive_results.json
benchmarks/EvaluationScripts/: Arguan_TR_Evaluation.ipynb  BEIR_TR_Evaluation.ipynb  SciFact_TR_Evaluation.ipynb
docs/blog/hf_blog/: TurkColBERT.md  TurkColBERT_stages.md
notebooks/: Fine_tuning_AllNLITR_STSB-2.ipynb  Turkish_Tiny_Late_Interaction_Models_Train_&_Test.ipynb
src/: muvera.py
